# fastapi-starter

./: .env.template  .gitignore  .logging.dev.yaml  .logging.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
src/: bootstrap.py  logs.py  main.py  middleware.py  router.py  settings.py
src/api/: v1.py
src/apps/healthcheck/: router.py
src/core/: database.py  enums.py  type_vars.py
src/core/exceptions/: __init__.py  repository.py
src/core/models/: base.py
src/core/repositories/: crud.py
src/core/schemas/: __init__.py  exceptions.py  repository.py  request_response.py
src/core/utils/: __init__.py  case_converter.py
tests/unit/: test_case_converter.py  test_request_response_schemas.py
